--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.31.0
-pandas==2.1.4
-plotly==5.18.0
-requests==2.31.0
-markdown==3.5.1
-weasyprint==60.2
-openpyxl==3.1.2
+streamlit>=1.31.0
+pandas>=2.2.0
+plotly>=5.18.0
+requests
+markdown
+weasyprint
+openpyxl
