--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,10 +1,15 @@
 [theme]
-primaryColor = "#00E5FF"
-backgroundColor = "#0A0E17"
-secondaryBackgroundColor = "#151B2B"
-textColor = "#F0F2F6"
-font = "sans serif"
+# Skill Blue - Primary buttons and accents
+primaryColor = "#1A33F5"
 
-[server]
-headless = true
-runOnSave = true
+# Indigo - Dark Background for that professional "Dark Mode" feel
+backgroundColor = "#150B3F"
+
+# Darker Indigo - Secondary background (sidebar, cards)
+secondaryBackgroundColor = "#0F072D"
+
+# Aqua - Text color for high contrast against Indigo
+textColor = "#7CF7F9"
+
+# Font defaults
+font = "sans serif"
